<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_weight="0.25"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="#ff000000"
        android:text="@string/lx"
        android:textSize="17sp"
        />
    <TextView

        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_weight="0.5"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="#ff000000"
        android:text="@string/dd"
        android:textSize="17sp"
        />
    <TextView

        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_weight="0.25"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="#ff000000"
        android:text="@string/sj"
        android:textSize="17sp"
        />

</LinearLayout>