<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/top_navigate"
    android:layout_width="fill_parent"
    android:layout_height="48dp"
    android:background="@color/titleback"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/NavigateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="40dp"
        android:text="@string/listdzzh"
        android:textColor="#ffffffff"
        android:textSize="21sp" />

    <TextView
        android:id="@+id/mapBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:text="@string/bj"
        android:textColor="#ffffffff"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:text="@string/fanhui"
        android:textColor="#ffffffff"
        android:textSize="19sp" />
</RelativeLayout>