<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/top_navigate"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@color/titleback"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/NavigateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:text="@string/xclj"
            android:textColor="#ffffffff"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/xcbackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/fanhui"
            android:textColor="#ffffffff"
            android:textSize="19sp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="85dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#ff000000"
            android:text="@string/xckg"
            android:textSize="17sp"
            />
        <Switch
            android:id="@+id/switchXC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/off"
            android:textOn="@string/on"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:layout_gravity="center|left"
            android:layout_marginLeft="40dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="85dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#ff000000"
            android:text="@string/xcjg"
            android:textSize="17sp"/>
        <Spinner
            android:id="@+id/gapspinner"
            android:layout_margin="5dp"
            android:clickable="false"
            android:layout_width="match_parent"
            android:layout_height="40dp">
        </Spinner>
    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:orientation="horizontal">-->
        <!--<TextView-->
            <!--android:layout_width="85dp"-->
            <!--android:layout_height="20dp"-->
            <!--android:gravity="center"-->
            <!--android:layout_gravity="center"-->
            <!--android:textColor="#ff000000"-->
            <!--android:text="@string/xcks"-->
            <!--android:textSize="17sp"/>-->
        <!--<Spinner-->
            <!--android:id="@+id/spinnerKS"-->
            <!--android:layout_margin="5dp"-->
            <!--android:clickable="false"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="40dp">-->
        <!--</Spinner>-->
    <!--</LinearLayout>-->
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:orientation="horizontal">-->
        <!--<TextView-->
            <!--android:layout_width="85dp"-->
            <!--android:layout_height="20dp"-->
            <!--android:gravity="center"-->
            <!--android:layout_gravity="center"-->
            <!--android:textColor="#ff000000"-->
            <!--android:text="@string/xcjs"-->
            <!--android:textSize="17sp"/>-->
        <!--<Spinner-->
            <!--android:id="@+id/spinnerJS"-->
            <!--android:layout_margin="5dp"-->
            <!--android:clickable="false"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="40dp">-->
        <!--</Spinner>-->
    <!--</LinearLayout>-->
</LinearLayout>
