<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">
    <RelativeLayout
        android:id="@+id/top_navigate"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@color/titleback"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/NavigateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:text="@string/logintitle"
            android:textColor="#ffffffff"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/VersionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/NavigateTitle"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/NavigateTitle"
            android:textColor="#ffffffff"
            android:textSize="12sp" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:text="@string/uid"
            android:textSize="17sp"
            android:layout_gravity="center"
            android:gravity="center"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/UidEditText"
            android:gravity="left|center_vertical"
            android:paddingLeft="5dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:text="@string/pwd"
            android:textSize="17sp"
            android:gravity="center"
            android:layout_gravity="center"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/PwdEditText"
            android:layout_gravity="center_vertical"
            android:gravity="left|center_vertical"
            android:paddingLeft="5dp"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/keepPsd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:textSize="18sp"
            android:layout_marginLeft="12dp"
            android:paddingLeft="25dp"
            android:text="记住密码"/>
        <TextView
            android:id="@+id/syscongTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:textSize="18sp"
            android:paddingRight="20dp"
            android:gravity="center_vertical|right"
            android:text="系统配置"/>
    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="21sp"
        android:text="@string/login"/>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/bottomTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="技术支持:毕节市鹏博科技有限责任公司"
            android:textColor="@color/ziti"
            android:textSize="15sp" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/lbsname1"
            android:textColor="@color/ziti"
            android:textSize="15sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/app_name"
            android:layout_above="@id/bottomTextView"
            android:gravity="center"
            android:textColor="@color/ziti"
            android:textSize="17sp" />
    </RelativeLayout>
</LinearLayout>