
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <include layout="@layout/map_header_layout"></include>
    <TableLayout
        android:id="@+id/GridView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="5dp"
        android:layout_gravity="center_horizontal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_weight="1.0"
                >
                <TextView
                    android:layout_width="75dp"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:textColor="#ff000000"
                    android:text="@string/gypzdtquery1"
                    android:textSize="15sp"
                    />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:id="@+id/spinnergynf"
                    android:layout_weight="1" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_weight="1.0"
                >
                <TextView
                    android:layout_width="75dp"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:textColor="#ff000000"
                    android:text="@string/gypzdtquery2"
                    android:textSize="15sp"
                    />
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:id="@+id/spinnergydz"
                    android:layout_weight="1" />

            </LinearLayout>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_weight="1.0"
                >
                <TextView
                    android:layout_width="75dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:textColor="#ff000000"
                    android:text="@string/gypzdtquery3"
                    android:textSize="15sp"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/EditTextxmmc"
                    android:textSize="15sp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="center_vertical|left"
                    android:layout_weight="1" />

            </LinearLayout>
        </TableRow>
        <TableRow
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <Button
                android:id="@+id/queryBtn"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="#ff000000"
                android:text="@string/cx"
                android:textSize="18sp"
                android:layout_weight="0.5"
                />
        </TableRow>
    </TableLayout>
</LinearLayout>